--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -4,12 +4,134 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<link rel="stylesheet" href="./css/reset.css" />
-		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="../css/reset.css" />
+		<link rel="stylesheet" href="../css/styles.css" />
 	</head>
 	<body>
-		<nav id="sidebar"></nav>
-		<main class="container"></main>
-		<script src="./js/renderer.js" type="module"></script>
+		<nav id="sidebar">
+			<ul>
+				<li>
+					<span class="logo"> TaskMaster </span>
+					<button id="toggle-btn">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<title>chevron-double-left</title>
+							<path
+								d="M18.41,7.41L17,6L11,12L17,18L18.41,16.59L13.83,12L18.41,7.41M12.41,7.41L11,6L5,12L11,18L12.41,16.59L7.83,12L12.41,7.41Z" />
+						</svg>
+					</button>
+				</li>
+				<li class="active">
+					<button data-target="dashboard">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<title>view-dashboard</title>
+							<path
+								d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z" />
+						</svg>
+						<span>Dashboard</span>
+					</button>
+				</li>
+				<li>
+					<button class="dropdown-btn">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<title>list-box</title>
+							<path
+								d="M19 3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1 21 21 20.1 21 19V5C21 3.9 20.1 3 19 3M7 7H9V9H7V7M7 11H9V13H7V11M7 15H9V17H7V15M17 17H11V15H17V17M17 13H11V11H17V13M17 9H11V7H17V9Z" />
+						</svg>
+						<span>Tasks</span>
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<title>chevron-down</title>
+							<path
+								d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" />
+						</svg>
+					</button>
+					<ul class="sub-menu">
+						<div>
+							<li>
+								<button data-target="view-all-tasks">
+									<span>View All Tasks</span>
+								</button>
+							</li>
+							<li>
+								<button data-target="add-task">
+									<span>Add Task</span>
+								</button>
+							</li>
+						</div>
+					</ul>
+				</li>
+				<li>
+					<button class="dropdown-btn">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<title>dots-horizontal-circle</title>
+							<path
+								d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,10.5A1.5,1.5 0 0,0 10.5,12A1.5,1.5 0 0,0 12,13.5A1.5,1.5 0 0,0 13.5,12A1.5,1.5 0 0,0 12,10.5M6.5,10.5A1.5,1.5 0 0,0 5,12A1.5,1.5 0 0,0 6.5,13.5A1.5,1.5 0 0,0 8,12A1.5,1.5 0 0,0 6.5,10.5M17.5,10.5A1.5,1.5 0 0,0 16,12A1.5,1.5 0 0,0 17.5,13.5A1.5,1.5 0 0,0 19,12A1.5,1.5 0 0,0 17.5,10.5Z" />
+						</svg>
+						<span>Extra</span>
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+							<title>chevron-down</title>
+							<path
+								d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" />
+						</svg>
+					</button>
+					<ul class="sub-menu">
+						<div>
+							<li>
+								<button data-target="export-xlsx">
+									<span>Export to XLSX</span>
+								</button>
+							</li>
+							<li>
+								<button data-target="graphs">
+									<span>Graphs</span>
+								</button>
+							</li>
+						</div>
+					</ul>
+				</li>
+			</ul>
+		</nav>
+		<main class="container">
+			<section id="dashboard">
+				<header>
+					<h1>Dashboard</h1>
+					<div class="date"></div>
+				</header>
+				<div class="dashboard-body">
+					<article class="card">
+						<div class="card-title">
+							<h2>Total Tasks</h2>
+						</div>
+						<div class="card-body">
+							<p>10</p>
+						</div>
+					</article>
+					<article class="card active">
+						<div class="card-title">
+							<h2>Open Tasks</h2>
+						</div>
+						<div class="card-body">
+							<p>10</p>
+						</div>
+					</article>
+					<article class="card progress">
+						<div class="card-title">
+							<h2>In Progress Tasks</h2>
+						</div>
+						<div class="card-body">
+							<p>10</p>
+						</div>
+					</article>
+					<article class="card done">
+						<div class="card-title">
+							<h2>Closed Tasks</h2>
+						</div>
+						<div class="card-body">
+							<p>10</p>
+						</div>
+					</article>
+				</div>
+			</section>
+		</main>
+		<script src="../js/renderer.js" type="module"></script>
 	</body>
 </html>
